Fix overflow issues

--- a/src/components/buttons/tiqqe-button/tiqqe-button.scss
+++ b/src/components/buttons/tiqqe-button/tiqqe-button.scss
@@ -14,7 +14,7 @@ button {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   position: relative;
-  overflow: hidden;
+  overflow-wrap: break-word;
 }
 
 button {
